tests/NormalTests/paczka1/small_fuzzy/21412403.err
Error in line 13: Nb5Se08cvU S214 12,1
Error in line 6: zg7VkWZq0 A629 9,1
Error in line 5: cybLiSjNm S912 14,2
